NYCCHKBK-6053 - Updated css for centered aligned columns in the widget to fix the vertical alignment of the header column and fixed child contracts alignment

--- a/source/webapp/sites/all/themes/checkbook3/css/global.css
+++ b/source/webapp/sites/all/themes/checkbook3/css/global.css
@@ -1880,6 +1880,8 @@ td.sub-cont-status {
 .dataTable th.sub-cont-status div {
     display:block;
     text-align:center;
+    float:right;
+    padding-right: 10px;
 }
 td.sub-cont-status div {
     margin-left:25px !important;
